<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ /*
  ~  * Created by Andrey Sevastianov on 26.07.20 23:09
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 28.06.20 21:52
  ~  */
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="73dp">


    <Button
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/margin_top_time_view"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/tablo"
        android:gravity="center"
        android:onClick="onClickWorkTimer"
        android:text="00:00"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorTimer"
        android:background="@color/colorBackground"
        android:textSize="@dimen/text_size_time_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leftScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/margin_top_score"
        android:fontFamily="@font/digital7_mono"
        android:gravity="center"
        android:inputType="number"
        android:onClick="onClickPlayer1"
        android:text="0"
        android:textColor="@color/colorScore"
        android:background="@color/colorBackground"
        android:textSize="@dimen/text_size_score"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/time_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rightScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time_view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_top_score"
        android:fontFamily="@font/digital7_mono"
        android:gravity="center"
        android:inputType="number"
        android:onClick="onClickPlayer2"
        android:text="0"
        android:textColor="@color/colorScore"
        android:background="@color/colorBackground"
        android:textSize="@dimen/text_size_score"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reset_score"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="@dimen/start_button_width"
        android:layout_height="@dimen/start_button_height"
        android:layout_marginTop="@dimen/start_button_top"
        android:layout_marginEnd="@dimen/rest_score_button_end"
        android:layout_marginRight="@dimen/rest_score_button_end"
        android:onClick="onClickResetScore"
        android:text="@string/reset_score"
        android:textSize="@dimen/text_size_reset_score_button"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/reset_button"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="@dimen/start_button_width"
        android:layout_height="@dimen/start_button_height"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="@dimen/start_button_top"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onClickReset"
        android:text="@string/reset"
        android:textSize="@dimen/text_size_start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonPlayer1"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rightScore"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/margin_start_player1"
        android:layout_marginLeft="@dimen/margin_left_player1"
        android:layout_marginTop="@dimen/margin_left_player1"
        android:layout_marginBottom="8dp"
        android:onClick="onClickPlayer1"
        android:text="@string/player_1"
        android:textSize="@dimen/text_size_button_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftScore" />

    <Button
        android:id="@+id/buttonPlayer2"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rightScore"
        android:layout_alignBottom="@+id/buttonPlayer1"
        android:layout_marginTop="@dimen/margin_start_player1"
        android:layout_marginEnd="@dimen/margin_left_player1"
        android:layout_marginRight="@dimen/margin_left_player1"
        android:layout_marginBottom="8dp"
        android:onClick="onClickPlayer2"
        android:text="@string/player_2"
        android:textSize="@dimen/text_size_button_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightScore" />


    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_5min_button"
        android:layout_marginLeft="@dimen/margin_start_5min_button"
        android:layout_marginTop="@dimen/margin_top_radio_button"
        android:checked="true"
        android:onClick="onClickSecondsRadio"
        android:text="5 min"
        android:textColor="@color/colorRadioButton"
        android:textSize="@dimen/text_size_radio_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/margin_top_radio_button"
        android:checked="false"
        android:onClick="onClickSecondsRadio"
        android:text="10 min"
        android:textColor="@color/colorRadioButton"
        android:textSize="@dimen/text_size_radio_button"
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonScoreMinus1"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="@dimen/button_score_adj_width"
        android:layout_height="@dimen/button_score_adj_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickScoreAdj1"
        android:text="@string/adj_score"
        android:textSize="@dimen/text_size_button_adjust"
        app:layout_constraintBottom_toTopOf="@+id/leftScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonScoreMinus2"
        style="@android:style/Widget.Holo.Light.Button.Inset"
        android:layout_width="@dimen/button_score_adj_width"
        android:layout_height="@dimen/button_score_adj_height"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"
        android:onClick="onClickScoreAdj2"
        android:text="@string/adj_score"
        android:textSize="@dimen/text_size_button_adjust"
        app:layout_constraintBottom_toTopOf="@+id/rightScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>